// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forest renders correctly with all props 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c5 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c8 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c46 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c44 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c40 {
  display: inline-block;
  position: relative;
}

.c41 {
  align-items: center;
  background: none;
  border: none;
  color: var(--color-paragraph);
  cursor: pointer;
  display: inline-flex;
  height: 44px;
  justify-content: center;
  margin: -13px -10px -13px -8px;
  opacity: 0.65;
  transition: opacity 0.2s ease;
  vertical-align: middle;
  width: 44px;
}

.c41:focus-visible {
  border-radius: 100%;
  opacity: 1;
  outline: 2px solid var(--color-highlight);
  outline-offset: -10px;
}

.c41 svg {
  display: block;
}

.c6 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  border: 1px solid rgba(128, 128, 128, 0.2);
  border-radius: 999px;
  display: inline-flex;
  gap: 0.5rem;
  margin-bottom: 1.25rem;
  padding: 0.3rem 0.75rem 0.3rem 0.625rem;
  width: fit-content;
}

.c3 {
  animation: k0 2.4s ease-in-out infinite;
  background: var(--color-highlight);
  border-radius: 100%;
  flex-shrink: 0;
  height: 6px;
  width: 6px;
}

.c4 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
}

.c0 {
  padding: 3rem 0;
  position: relative;
}

.c14 {
  scroll-margin-top: 6rem;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1rem;
  max-width: 640px;
}

.c9 {
  line-height: 1.6;
  margin-bottom: 2.5rem;
  max-width: 580px;
}

.c10 {
  display: flex;
  flex-direction: column;
  gap: 0.875rem;
  margin-bottom: 2.5rem;
}

.c11 {
  align-items: flex-start;
  display: flex;
  gap: 1rem;
}

.c12 {
  color: var(--color-paragraph);
  flex-shrink: 0;
  font-size: 0.75rem;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  white-space: nowrap;
  width: 110px;
}

.c13 {
  color: var(--color-headline);
  font-size: 0.875rem;
  line-height: 1.2;
}

.c15 {
  background: color-mix(in srgb, var(--color-highlight) 5%, transparent);
  border: 2px solid var(--color-highlight);
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-bottom: 2.5rem;
  padding: 2rem;
}

.c16 {
  flex: 1;
}

.c20 {
  align-items: flex-start;
  border-top: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  padding-top: 0.25rem;
}

.c21 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.15em;
  margin-bottom: 0.25rem;
  text-transform: uppercase;
}

.c22 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 3.5rem;
  font-weight: 700;
  line-height: 1;
}

.c23 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

.c17 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0 0 0.625rem;
}

.c18 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.6;
  margin: 0 0 1.75rem;
  max-width: 420px;
}

.c19 {
  align-items: center;
  background: var(--color-button);
  border: 2px solid transparent;
  border-radius: 4px;
  color: #ffffff;
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 1rem;
  font-weight: 700;
  gap: 0.5rem;
  padding: 0.875rem 2rem;
  transition: all 0.2s ease;
}

.c19:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c24 {
  border: 1px solid rgba(128, 128, 128, 0.15);
  border-radius: 1rem;
  margin-bottom: 2rem;
  padding: 1.5rem 1.75rem;
}

.c26 {
  align-items: baseline;
  display: flex;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.c27 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 700;
}

.c28 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
}

.c29 {
  background: color-mix(in srgb, var(--color-highlight) 10%, transparent);
  border-radius: 999px;
  height: 8px;
  margin-bottom: 0.875rem;
  overflow: hidden;
}

.c30 {
  background: linear-gradient(       90deg,       var(--color-highlight),       color-mix(in srgb, var(--color-highlight) 80%, transparent)     );
  border-radius: 999px;
  height: 100%;
  transition: width 1.2s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  width: 2%;
}

.c31 {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.c32 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  letter-spacing: 0.05em;
}

.c33 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 700;
}

.c25 {
  display: grid;
  gap: 1.5rem;
}

.c34 {
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding-top: 1.5rem;
}

.c35 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.12em;
  text-transform: uppercase;
}

.c36 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.2;
}

.c37 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
}

.c38 {
  color: var(--color-headline);
  font-size: 0.875rem;
  font-weight: 600;
}

.c39 {
  display: inline-block;
  white-space: nowrap;
}

.c39 sub {
  font-size: 0.7em;
  line-height: 1;
}

.c42 {
  align-items: flex-end;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  margin-top: 0.25rem;
}

.c43 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c45 {
  align-items: center;
  color: var(--color-highlight);
  display: inline-flex;
  flex-shrink: 0;
  font-size: 0.875rem;
  font-weight: 600;
  text-decoration: none;
  transition: opacity 0.2s ease;
}

.c45:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c47 {
  color: var(--color-paragraph);
  margin-bottom: 0;
}

.c47 a {
  color: var(--color-highlight);
  text-decoration: none;
  transition: opacity 0.2s ease;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c41:hover {
    opacity: 1;
  }
}

@media (max-width: 1199.98px) {
  .c0 {
    padding: 2rem 0;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c15 {
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    padding: 2.5rem 3rem;
  }
}

@media (min-width: 900px) {
  .c20 {
    align-items: flex-end;
    border-left: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
    border-top: none;
    flex-shrink: 0;
    padding-left: 3rem;
    padding-top: 0;
    text-align: right;
    width: 260px;
  }
}

@media (min-width: 1200px) {
  .c22 {
    font-size: 4.5rem;
  }
}

@media (min-width: 1200px) {
  .c17 {
    font-size: 2rem;
  }
}

@media (hover: hover) {
  .c19:hover {
    background: transparent;
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

@media (min-width: 900px) {
  .c25 {
    gap: 2rem;
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 900px) {
  .c34 {
    border-left: 1px solid rgba(128, 128, 128, 0.12);
    border-top: none;
    padding-left: 2rem;
    padding-top: 0;
  }
}

@media (hover: hover) {
  .c45:hover {
    opacity: 0.75;
  }
}

@media (hover: hover) {
  .c47 a:hover {
    opacity: 0.75;
  }
}

@keyframes k0 {
  0%, 100% {
    opacity: 1;
    transform: scale(1);
  }

  50% {
    opacity: 0.4;
    transform: scale(0.75);
  }
}

<div>
  <section
    class="c0"
    id="forest"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          aria-hidden="true"
          class="c3"
        />
        <span
          class="c4"
        >
          Growing in public
        </span>
      </div>
      <p
        class="c5 c6"
      >
        🌳 Forest
      </p>
      <h2
        class="c7"
      >
        This portfolio grows with your feedback.
      </h2>
      <p
        class="c8 c9"
      >
        Forest didn't start with this website. It started months earlier — a personal commitment to give something back. This page simply invites others to become part of that journey.
      </p>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            May 2026
          </span>
          <span
            class="c13"
          >
            🌱  Started planting trees every month — a personal commitment, before any portfolio.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            July 2026
          </span>
          <span
            class="c13"
          >
            🌳  Forest was born. The portfolio invites others to become part of that journey.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            Today
          </span>
          <span
            class="c13"
          >
            →  Every meaningful suggestion grows a pair of trees — one for you, one matched by me.
          </span>
        </div>
      </div>
      <div
        class="c14"
        id="forest-impact"
      />
      <div
        class="c15"
      >
        <div
          class="c16"
        >
          <h3
            class="c17"
          >
            Help this portfolio grow.
          </h3>
          <p
            class="c18"
          >
            Every meaningful suggestion plants two real trees — one dedicated to you, one matched by me. Together, we're growing this forest.
          </p>
          <button
            aria-haspopup="dialog"
            class="c19"
          >
            🌱 Plant a leaf
          </button>
        </div>
        <div
          class="c20"
        >
          <span
            class="c21"
          >
            My Forest
          </span>
          <span
            class="c22"
          >
            34
          </span>
          <span
            class="c23"
          >
            Trees planted since May 2026
          </span>
        </div>
      </div>
      <div
        class="c24"
      >
        <div
          class="c25"
        >
          <div>
            <div
              class="c26"
            >
              <span
                class="c27"
              >
                Season One
              </span>
              <span
                class="c28"
              >
                0
                 / 
                50
                 
                trees
              </span>
            </div>
            <div
              class="c29"
            >
              <div
                class="c30"
              />
            </div>
            <div
              class="c31"
            >
              <span
                class="c32"
              >
                Trees planted through portfolio feedback
              </span>
              <span
                class="c33"
              >
                0
                %
              </span>
            </div>
          </div>
          <div
            class="c34"
            data-testid="season-project"
          >
            <span
              class="c35"
            >
              Season One project
            </span>
            <span
              class="c36"
            >
              Community Reforestation in Indonesia
            </span>
            <span
              class="c37"
            >
              Indonesia · Tropical community reforestation
            </span>
            <span
              class="c38"
              data-testid="project-stats"
            >
              4 trees · 2 species
              <span
                class="c39"
              >
                 · 1.5 t CO
                <sub>
                  2
                </sub>
                 lifetime estimate
                <span
                  class="c40"
                >
                  <button
                    aria-expanded="false"
                    aria-label="About the CO₂ estimate"
                    class="c41"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="17"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-width="1.75"
                      viewBox="0 0 24 24"
                      width="17"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="9.5"
                      />
                      <path
                        d="M12 11v6"
                      />
                      <path
                        d="M12 7.5v.5"
                      />
                    </svg>
                  </button>
                </span>
              </span>
            </span>
            <div
              class="c42"
            >
              <ul
                class="c43"
              >
                <li
                  class="c44"
                >
                  Sengon
                </li>
                <li
                  class="c44"
                >
                  Kadamba
                </li>
              </ul>
              <a
                class="c45"
                href="https://tree-nation.com/projects/community-reforestation-in-indonesia"
                rel="noopener noreferrer"
                target="_blank"
              >
                View project
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="11"
                  style="display: inline-block; margin-left: 0.25rem;"
                  viewBox="0 0 11 11"
                  width="11"
                >
                  <path
                    d="M2 9L9 2M9 2H4M9 2V7"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
      <p
        class="c46 c47"
      >
        <a
          href="https://tree-nation.com/profile/andrea-agostini-103769"
          rel="noopener noreferrer"
          target="_blank"
        >
          View the living forest
          <svg
            aria-hidden="true"
            fill="none"
            height="11"
            style="display: inline-block; margin-left: 0.25rem; vertical-align: middle; position: relative; top: -1px;"
            viewBox="0 0 11 11"
            width="11"
          >
            <path
              d="M2 9L9 2M9 2H4M9 2V7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </a>
      </p>
    </section>
  </section>
</div>
`;

exports[`Forest renders correctly with minimal props 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c5 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c8 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c34 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  border: 1px solid rgba(128, 128, 128, 0.2);
  border-radius: 999px;
  display: inline-flex;
  gap: 0.5rem;
  margin-bottom: 1.25rem;
  padding: 0.3rem 0.75rem 0.3rem 0.625rem;
  width: fit-content;
}

.c3 {
  animation: k0 2.4s ease-in-out infinite;
  background: var(--color-highlight);
  border-radius: 100%;
  flex-shrink: 0;
  height: 6px;
  width: 6px;
}

.c4 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
}

.c0 {
  padding: 3rem 0;
  position: relative;
}

.c14 {
  scroll-margin-top: 6rem;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1rem;
  max-width: 640px;
}

.c9 {
  line-height: 1.6;
  margin-bottom: 2.5rem;
  max-width: 580px;
}

.c10 {
  display: flex;
  flex-direction: column;
  gap: 0.875rem;
  margin-bottom: 2.5rem;
}

.c11 {
  align-items: flex-start;
  display: flex;
  gap: 1rem;
}

.c12 {
  color: var(--color-paragraph);
  flex-shrink: 0;
  font-size: 0.75rem;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  white-space: nowrap;
  width: 110px;
}

.c13 {
  color: var(--color-headline);
  font-size: 0.875rem;
  line-height: 1.2;
}

.c15 {
  background: color-mix(in srgb, var(--color-highlight) 5%, transparent);
  border: 2px solid var(--color-highlight);
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-bottom: 2.5rem;
  padding: 2rem;
}

.c16 {
  flex: 1;
}

.c20 {
  align-items: flex-start;
  border-top: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  padding-top: 0.25rem;
}

.c21 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.15em;
  margin-bottom: 0.25rem;
  text-transform: uppercase;
}

.c22 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 3.5rem;
  font-weight: 700;
  line-height: 1;
}

.c23 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

.c17 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0 0 0.625rem;
}

.c18 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.6;
  margin: 0 0 1.75rem;
  max-width: 420px;
}

.c19 {
  align-items: center;
  background: var(--color-button);
  border: 2px solid transparent;
  border-radius: 4px;
  color: #ffffff;
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 1rem;
  font-weight: 700;
  gap: 0.5rem;
  padding: 0.875rem 2rem;
  transition: all 0.2s ease;
}

.c19:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c24 {
  border: 1px solid rgba(128, 128, 128, 0.15);
  border-radius: 1rem;
  margin-bottom: 2rem;
  padding: 1.5rem 1.75rem;
}

.c26 {
  align-items: baseline;
  display: flex;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.c27 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 700;
}

.c28 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
}

.c29 {
  background: color-mix(in srgb, var(--color-highlight) 10%, transparent);
  border-radius: 999px;
  height: 8px;
  margin-bottom: 0.875rem;
  overflow: hidden;
}

.c30 {
  background: linear-gradient(       90deg,       var(--color-highlight),       color-mix(in srgb, var(--color-highlight) 80%, transparent)     );
  border-radius: 999px;
  height: 100%;
  transition: width 1.2s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  width: 2%;
}

.c31 {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.c32 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  letter-spacing: 0.05em;
}

.c33 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 700;
}

.c25 {
  display: grid;
  gap: 1.5rem;
}

.c35 {
  color: var(--color-paragraph);
  margin-bottom: 0;
}

.c35 a {
  color: var(--color-highlight);
  text-decoration: none;
  transition: opacity 0.2s ease;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (max-width: 1199.98px) {
  .c0 {
    padding: 2rem 0;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c15 {
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    padding: 2.5rem 3rem;
  }
}

@media (min-width: 900px) {
  .c20 {
    align-items: flex-end;
    border-left: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
    border-top: none;
    flex-shrink: 0;
    padding-left: 3rem;
    padding-top: 0;
    text-align: right;
    width: 260px;
  }
}

@media (min-width: 1200px) {
  .c22 {
    font-size: 4.5rem;
  }
}

@media (min-width: 1200px) {
  .c17 {
    font-size: 2rem;
  }
}

@media (hover: hover) {
  .c19:hover {
    background: transparent;
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

@media (min-width: 900px) {
  .c25 {
    gap: 2rem;
    grid-template-columns: 1fr 1fr;
  }
}

@media (hover: hover) {
  .c35 a:hover {
    opacity: 0.75;
  }
}

@keyframes k0 {
  0%, 100% {
    opacity: 1;
    transform: scale(1);
  }

  50% {
    opacity: 0.4;
    transform: scale(0.75);
  }
}

<div>
  <section
    class="c0"
    id="forest"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          aria-hidden="true"
          class="c3"
        />
        <span
          class="c4"
        >
          Growing in public
        </span>
      </div>
      <p
        class="c5 c6"
      >
        🌳 Forest
      </p>
      <h2
        class="c7"
      >
        This portfolio grows with your feedback.
      </h2>
      <p
        class="c8 c9"
      >
        Forest didn't start with this website. It started months earlier — a personal commitment to give something back. This page simply invites others to become part of that journey.
      </p>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            May 2026
          </span>
          <span
            class="c13"
          >
            🌱  Started planting trees every month — a personal commitment, before any portfolio.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            July 2026
          </span>
          <span
            class="c13"
          >
            🌳  Forest was born. The portfolio invites others to become part of that journey.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            Today
          </span>
          <span
            class="c13"
          >
            →  Every meaningful suggestion grows a pair of trees — one for you, one matched by me.
          </span>
        </div>
      </div>
      <div
        class="c14"
        id="forest-impact"
      />
      <div
        class="c15"
      >
        <div
          class="c16"
        >
          <h3
            class="c17"
          >
            Help this portfolio grow.
          </h3>
          <p
            class="c18"
          >
            Every meaningful suggestion plants two real trees — one dedicated to you, one matched by me. Together, we're growing this forest.
          </p>
          <button
            aria-haspopup="dialog"
            class="c19"
          >
            🌱 Plant a leaf
          </button>
        </div>
        <div
          class="c20"
        >
          <span
            class="c21"
          >
            My Forest
          </span>
          <span
            class="c22"
          >
            34
          </span>
          <span
            class="c23"
          >
            Trees planted since May 2026
          </span>
        </div>
      </div>
      <div
        class="c24"
      >
        <div
          class="c25"
        >
          <div>
            <div
              class="c26"
            >
              <span
                class="c27"
              >
                Season One
              </span>
              <span
                class="c28"
              >
                0
                 / 
                50
                 
                trees
              </span>
            </div>
            <div
              class="c29"
            >
              <div
                class="c30"
              />
            </div>
            <div
              class="c31"
            >
              <span
                class="c32"
              >
                Trees planted through portfolio feedback
              </span>
              <span
                class="c33"
              >
                0
                %
              </span>
            </div>
          </div>
        </div>
      </div>
      <p
        class="c34 c35"
      >
        <a
          href="https://tree-nation.com/profile/andrea-agostini-103769"
          rel="noopener noreferrer"
          target="_blank"
        >
          View the living forest
          <svg
            aria-hidden="true"
            fill="none"
            height="11"
            style="display: inline-block; margin-left: 0.25rem; vertical-align: middle; position: relative; top: -1px;"
            viewBox="0 0 11 11"
            width="11"
          >
            <path
              d="M2 9L9 2M9 2H4M9 2V7"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </a>
      </p>
    </section>
  </section>
</div>
`;
